--- a/PlanetWallet/Resources/2_PinCode.storyboard
+++ b/PlanetWallet/Resources/2_PinCode.storyboard
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="362"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dpQ-zW-vGd" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="74.333333333333329" y="130" width="226.33333333333337" height="32.666666666666657"/>
+                                        <rect key="frame" x="64.666666666666686" y="119.66666666666667" width="246" height="40.666666666666671"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Bold" family="Work Sans" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -42,7 +42,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter the 4 digit + alphabet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUa-oG-T4d" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="90.666666666666686" y="171.66666666666666" width="194" height="18.666666666666657"/>
+                                        <rect key="frame" x="79" y="169.33333333333334" width="217" height="23.333333333333343"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
                                         <color key="textColor" red="0.36078431372549019" green="0.34901960784313724" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -53,7 +53,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9jw-S7-Cx7" customClass="PinView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="100.66666666666669" y="242" width="174" height="12"/>
+                                        <rect key="frame" x="100.66666666666669" y="244.33333333333331" width="174" height="12"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="174" id="EE6-7v-Pfc"/>
@@ -209,7 +209,7 @@
                         <segue destination="TTs-8X-dJK" kind="show" identifier="pincodecertification_to_pincoderegistration" id="f9N-gD-wbp"/>
                         <segue destination="aAK-og-Lal" kind="presentation" identifier="pincodecertification_to_mnemonicexport" modalPresentationStyle="fullScreen" id="oQS-nA-k7l"/>
                         <segue destination="8oz-5I-Pja" kind="presentation" identifier="pincodecertification_to_privatekeyexport" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="j75-8V-mct"/>
-                        <segue destination="PcL-wW-2bT" kind="show" identifier="pincodecertification_to_txreceipt" id="GVR-7J-VYr"/>
+                        <segue destination="PcL-wW-2bT" kind="presentation" identifier="pincodecertification_to_txreceipt" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="GVR-7J-VYr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0UT-ZS-r2n" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -222,7 +222,7 @@
                 <viewControllerPlaceholder storyboardName="3_Wallet" referencedIdentifier="PlanetGenerateController" id="Fx2-3Q-ztL" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dn1-V9-yQb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1337" y="132"/>
+            <point key="canvasLocation" x="1351" y="-147"/>
         </scene>
         <!--mainNavigationController-->
         <scene sceneID="to7-F9-ND8">
@@ -230,7 +230,7 @@
                 <viewControllerPlaceholder storyboardName="4_Main" referencedIdentifier="mainNavigationController" id="4dR-O6-8zh" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vjb-0h-4hG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1362" y="191"/>
+            <point key="canvasLocation" x="1362" y="-4"/>
         </scene>
         <!--MnemonicExportController-->
         <scene sceneID="sDW-gF-It7">
@@ -238,7 +238,7 @@
                 <viewControllerPlaceholder storyboardName="7_1_Planet" referencedIdentifier="MnemonicExportController" id="aAK-og-Lal" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pck-z6-4vt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1370" y="248"/>
+            <point key="canvasLocation" x="1368" y="134"/>
         </scene>
         <!--PrivateKeyExportController-->
         <scene sceneID="Erz-bK-HuL">
@@ -246,7 +246,7 @@
                 <viewControllerPlaceholder storyboardName="7_1_Planet" referencedIdentifier="PrivateKeyExportController" id="8oz-5I-Pja" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7c-fx-uQr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1370" y="296"/>
+            <point key="canvasLocation" x="1371" y="248"/>
         </scene>
         <!--TxReceiptController-->
         <scene sceneID="oAP-kn-VaF">
@@ -254,7 +254,7 @@
                 <viewControllerPlaceholder storyboardName="6_Transfer" referencedIdentifier="TxReceiptController" id="PcL-wW-2bT" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xf7-6T-2J8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1336" y="369"/>
+            <point key="canvasLocation" x="1350" y="369"/>
         </scene>
     </scenes>
     <resources>
