--- a/PlanetWallet/Views/6_Transfer/Cells/ContactAddrCell.xib
+++ b/PlanetWallet/Views/6_Transfer/Cells/ContactAddrCell.xib
@@ -20,6 +20,7 @@
             <connections>
                 <outlet property="addressLb" destination="sWg-un-HB0" id="Ydq-TZ-PNR"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="VJV-Gj-nZd"/>
+                <outlet property="iconImgView" destination="b9e-6S-NGB" id="W0K-kh-UqL"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,10 +30,21 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qua-Nb-OK3" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
                     <rect key="frame" x="20" y="22.5" width="40" height="40"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9e-6S-NGB">
+                            <rect key="frame" x="10" y="10" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="BUw-ym-YFU"/>
+                                <constraint firstAttribute="width" constant="20" id="bFr-0n-vAE"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
                     <color key="backgroundColor" name="borderDark"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="0bo-2H-zui"/>
                         <constraint firstAttribute="width" constant="40" id="AVh-KJ-uU0"/>
+                        <constraint firstItem="b9e-6S-NGB" firstAttribute="centerY" secondItem="qua-Nb-OK3" secondAttribute="centerY" id="Dxw-bF-FcB"/>
+                        <constraint firstItem="b9e-6S-NGB" firstAttribute="centerX" secondItem="qua-Nb-OK3" secondAttribute="centerX" id="LJs-b8-CXn"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -43,10 +55,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9e-6S-NGB">
-                    <rect key="frame" x="20" y="22.5" width="40" height="40"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0xf291b69799516156fAA7F9ed4c39536335Ab797A" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWg-un-HB0" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0xf291b69799516156fAA7F9ed4c39536335Ab797A" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWg-un-HB0">
                     <rect key="frame" x="80" y="10" width="237" height="65"/>
                     <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,15 +74,11 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="b9e-6S-NGB" firstAttribute="trailing" secondItem="qua-Nb-OK3" secondAttribute="trailing" id="FoM-uq-954"/>
                 <constraint firstItem="sWg-un-HB0" firstAttribute="leading" secondItem="qua-Nb-OK3" secondAttribute="trailing" constant="20" id="H5u-Qg-tNS"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="HSK-gC-vgk" secondAttribute="trailing" constant="18" id="HAZ-cL-6w3"/>
                 <constraint firstItem="qua-Nb-OK3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Hl5-PL-JN6"/>
-                <constraint firstItem="b9e-6S-NGB" firstAttribute="top" secondItem="qua-Nb-OK3" secondAttribute="top" id="KXS-Sy-Sme"/>
                 <constraint firstItem="sWg-un-HB0" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="QR3-tn-Eee"/>
                 <constraint firstItem="HSK-gC-vgk" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="RFN-kD-JFF"/>
-                <constraint firstItem="b9e-6S-NGB" firstAttribute="leading" secondItem="qua-Nb-OK3" secondAttribute="leading" id="Tmd-NL-ve2"/>
-                <constraint firstItem="b9e-6S-NGB" firstAttribute="bottom" secondItem="qua-Nb-OK3" secondAttribute="bottom" id="Ug2-wa-08h"/>
                 <constraint firstItem="qua-Nb-OK3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="Y1T-ZH-lcb"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="sWg-un-HB0" secondAttribute="bottom" constant="10" id="eZd-vz-H3s"/>
                 <constraint firstItem="HSK-gC-vgk" firstAttribute="leading" secondItem="sWg-un-HB0" secondAttribute="trailing" constant="20" id="yyd-Km-rNS"/>
