--- a/PlanetWallet/Views/7_Setting/Cells/PlanetCell.xib
+++ b/PlanetWallet/Views/7_Setting/Cells/PlanetCell.xib
@@ -45,7 +45,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Satriani" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIY-ax-hH9" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="86" y="56" width="60.5" height="23.5"/>
+                    <rect key="frame" x="86" y="56" width="148" height="23.5"/>
                     <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -56,9 +56,9 @@
                     </userDefinedRuntimeAttributes>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x124A…bEF9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeS-nq-46v" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="240" y="57.5" width="94" height="20.5"/>
+                    <rect key="frame" x="239" y="57.5" width="95" height="20.5"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="94" id="nVE-G8-31X"/>
+                        <constraint firstAttribute="width" constant="95" id="nVE-G8-31X"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                     <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
@@ -110,6 +110,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="KeS-nq-46v" secondAttribute="trailing" id="2qU-6R-GfL"/>
                 <constraint firstItem="HOC-As-rse" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EgV-Yb-no0"/>
                 <constraint firstItem="Yt5-pa-dQS" firstAttribute="leading" secondItem="aIY-ax-hH9" secondAttribute="leading" id="Gw4-jz-07o"/>
+                <constraint firstItem="KeS-nq-46v" firstAttribute="leading" secondItem="aIY-ax-hH9" secondAttribute="trailing" constant="5" id="HPM-CP-vfs"/>
                 <constraint firstItem="KeS-nq-46v" firstAttribute="centerY" secondItem="aIY-ax-hH9" secondAttribute="centerY" id="Hzq-V4-8bu"/>
                 <constraint firstItem="aIY-ax-hH9" firstAttribute="top" secondItem="Yt5-pa-dQS" secondAttribute="bottom" constant="11" id="RNH-E0-UcP"/>
                 <constraint firstItem="z3R-e6-OjC" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="RQ8-tw-1nv"/>
